; ModuleID = '/home/carl/AnghaBench/streem/src/extr_exec.c_exec_fwrite.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_exec.c_exec_fwrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"S\00", align 1
@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@STRM_NG = common dso_local global i32 0, align 4
@STRM_IO_WRITE = common dso_local global i32 0, align 4
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*)* @exec_fwrite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_fwrite(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca [7 x i8], align 1
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @strm_get_args(i32* %13, i32 %14, i32* %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %11)
  %17 = load i32, i32* %11, align 4
  %18 = getelementptr inbounds [7 x i8], [7 x i8]* %12, i64 0, i64 0
  %19 = call i32 @strm_str_cstr(i32 %17, i8* %18)
  %20 = load i32, i32* @O_WRONLY, align 4
  %21 = load i32, i32* @O_CREAT, align 4
  %22 = or i32 %20, %21
  %23 = call i32 @open(i32 %19, i32 %22, i32 420)
  store i32 %23, i32* %10, align 4
  %24 = load i32, i32* %10, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %4
  %27 = load i32, i32* @STRM_NG, align 4
  store i32 %27, i32* %5, align 4
  br label %34

28:                                               ; preds = %4
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* @STRM_IO_WRITE, align 4
  %31 = call i32 @strm_io_new(i32 %29, i32 %30)
  %32 = load i32*, i32** %9, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i32, i32* @STRM_OK, align 4
  store i32 %33, i32* %5, align 4
  br label %34

34:                                               ; preds = %28, %26
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i32 @strm_get_args(i32*, i32, i32*, i8*, i32*) #1

declare dso_local i32 @open(i32, i32, i32) #1

declare dso_local i32 @strm_str_cstr(i32, i8*) #1

declare dso_local i32 @strm_io_new(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
